; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_geoip1.c_init_geoip.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_geoip1.c_init_geoip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32* }

@conf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@geo_location_data = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_geoip() #0 {
  %1 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 1), align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 1), align 8
  %5 = call i32 @geoip_open_db(i32* %4)
  store i32 %5, i32* @geo_location_data, align 4
  br label %9

6:                                                ; preds = %0
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 8
  %8 = call i32 @GeoIP_new(i32 %7)
  store i32 %8, i32* @geo_location_data, align 4
  br label %9

9:                                                ; preds = %6, %3
  ret void
}

declare dso_local i32 @geoip_open_db(i32*) #1

declare dso_local i32 @GeoIP_new(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
